# Stock-application

./: CMakeLists.txt  README.md  Requirement.txt  bindings.cpp  build.sh  db.sqlite3  otp.py  setup.py  transactions.hpp  update_stocks.py  vercel.json
My_Stock/: db.sqlite3  manage.py
My_Stock/account/: admin.py  authentication.py  forms.py  models.py  tiingo.py  urls.py  views.py
My_Stock/blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
My_Stock/my_stock/: asgi.py  settings.py  urls.py  wsgi.py
account/: admin.py  authentication.py  check.py  forms.py  models.py  tiingo.py  transaction.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_account_transaction.py  0002_alter_price_db_name_alter_price_db_ticker.py  0003_financialdata_and_more.py  0003_payment_remove_transaction_owner_delete_account_and_more.py  0004_payment_braintree_id_profile_address_profile_phone_and_more.py  0005_alter_profile_phone.py  0006_payment_cvv_payment_card_number_and_more.py  0007_alter_payment_expiration_date.py  0008_alter_payment_expiration_date.py  0009_remove_payment_amount.py  0010_remove_payment_cvv_remove_payment_card_number_and_more.py  0011_delete_payment.py  0012_profile_pin.py  0013_profile_price.py  0014_price_db_remove_profile_price.py  (+5 more)
blog/: admin.py  feeds.py  forms.py  models.py  urls.py  views.py
my_stock/: __init__.py  asgi.py  celery.py  celery_app.py  middleware.py  settings.py  urls.py  wsgi.py
payment/: admin.py  bindings.cpp  cache_utils.py  forms.py  models.py  tasks.py  tests.py  transaction.py  urls.py  views.py
(+78 files in other folders)
